--- a/reportMaster2/2-Extraction.tex
+++ b/reportMaster2/2-Extraction.tex
@@ -9,6 +9,7 @@ Le parallélisme dans un programme informatique est difficile à trouver automat
 Les applications parallèles sont utilisées depuis un certain nombres d'années afin d'obtenir des performances (en matière de rapidité, et en matière de taille du problème traité), or il est difficile d'écrire des codes parallèles. À ce titre divers outils pour faciliter la parallélisation sont apparus, tels que \textsf{ParaScope} dès $1989$ \cite{Art24} qui est éditeur interactif de code parallèle. Ces outils se décomposent en de nombreuses catégories selon les utilisateurs qu'ils visent, et selon le parallélisme qu'ils permettent. Une partie d'entre elles est détaillées dans les paragraphes suivants. En second lieu sont introduits les stencils, qui constituent la classe de problèmes étudiée pendant ce stage. Enfin la hiérarchie de la mémoire du matériel est rappelée afin de mieux comprendre les problématiques liées aux stencils.
 
 \subsection{Expression du parallélisme}
+\label{sec:biblio}
 
 Décrire les problèmes à résoudre et le parallélisme qu'ils peuvent utiliser peut se faire de différentes manières avec les moyens actuels. Notamment il est possible d'identifier cinq catégories que sont : les langages de haut niveau dédiés à un domaine scientifique (dont les acteurs ne sont pas informaticiens), les langages et compilateurs pour les développeurs de métier (mais non obligatoirement spécialistes du HPC), l'ensemble des bibliothèques ou DSEL et supports d'exécution dédiés à la parallélisation (destinés aux spécialistes du HPC), les outils de formalisation des algorithmes employés (destinés aux spécialistes du HPC) et enfin les bibliothèques ou DSEL dédiées à un problème scientifique (et masquant la parallélisation, donc pour des scientifiques/développeurs non spécialistes du HPC).
 
@@ -23,7 +24,7 @@ Pour atteindre un parallélisme optimal il est souvent nécessaire de descendre 
 
 
 \paragraph{Formalisation des algorithmes.}
-La formalisation des algorithmes parallèles se fait à travers différents outils comme la représentation polyédrique, utilisée lorsqu'il s'agit de parcours de tableaux au sein de boucles affines. Cette représentation permet d'ailleurs de mieux classifier les algorithmes, notamment en squelettes comme dans \textsf{SkePU} et \textsf{Bones} \cite{Art4,Art3,Art9}. Ces squelettes permettent de définir le motif d'accès aux données des tableaux impliqués dans le calcul de façon précise et ainsi de l'optimiser. Un tel exemple de motif -- plutôt général -- est le paradigme de \emph{Map/Reduce} qui est proposé par \textsf{SkePU} \cite{MstThs1} (ainsi que par le langage dédié \textsf{Lime} cité plus-haut). Cependant tous les algorithmes ne décrivent pas un calcul : certains sont au contraire destinés à ordonnancer les calculs, c'est-à-dire les répartir sur les différents processeurs disponibles. Encore plutôt à l'état de concept, c'est dans ce but que sont utilisés les \emph{composants} permettant les prédictions (et optimisations) du temps d'exécution tels que dans l'article \cite{Art7}, où les algorithmes sont associés à des informations concernant leur coût. Par ailleurs dans \textsf{SkePU} \cite[p.~78]{Ths1} les \emph{conteneurs intelligents} aident la gestion des communications avec la mémoire (et aussi les prédictions de temps) en forçant l'utilisateur à informer la bibliothèque de la mémoire qu'il utilise. La formalisation des algorithmes se fait donc généralement par squelette ou composants en ce qui concerne les calculs à effectuer, et conteneurs en ce qui concerne les données à utiliser.
+La formalisation des algorithmes parallèles se fait à travers différents outils comme la représentation polyédrique, utilisée lorsqu'il s'agit de parcours de tableaux au sein de boucles affines. Cette représentation permet d'ailleurs de mieux classifier les algorithmes, notamment en squelettes comme dans \textsf{SkePU} et \textsf{Bones} \cite{Art4,Art3,Art9}. Ces squelettes permettent de définir le motif d'accès aux données des tableaux impliqués dans le calcul de façon précise et ainsi de l'optimiser. Un tel exemple de motif -- plutôt général -- est le paradigme de \emph{Map/Reduce} qui est proposé par \textsf{SkePU} \cite{MstThs1} (ainsi que par le langage dédié \textsf{Lime} cité plus-haut). Cependant tous les algorithmes ne décrivent pas un calcul : certains sont au contraire destinés à ordonnancer les calculs, c'est-à-dire les répartir sur les différents processeurs disponibles. Encore plutôt à l'état de concept, c'est dans ce but que sont utilisés les \emph{composants} permettant les prédictions (et optimisations) du temps d'exécution tels que dans l'article \cite{Art7}, où les algorithmes sont associés à des informations concernant leur coût. Par ailleurs dans \textsf{SkePU} \cite[p.~78]{Ths1} les \emph{smart containers} (ou \emph{conteneurs intelligents}) aident la gestion des communications avec la mémoire (et aussi les prédictions de temps) en forçant l'utilisateur à informer la bibliothèque de la mémoire qu'il utilise. La formalisation des algorithmes se fait donc généralement par squelette ou composants en ce qui concerne les calculs à effectuer, et conteneurs en ce qui concerne les données à utiliser.
 
 \paragraph{Bibliothèques et DSEL dédiés à un domaine scientifique.}
 Certaines bibliothèques sont destinées à des domaines d'application particuliers et abstraient cachent le parallélisme qu'elles utilisent. Par exemple il peut s'agir des \textsf{BLAS} pour les opérations d'algèbre linéaires simple, et de \textsf{\href{http://www.netlib.org/lapack/}{LAPACK}} pour les opérations plus complexes (de décomposition en valeurs propres par exemple). \textsf{\href{http://www.fftw.org/}{FFTW}} est quant à elle dédiée aux transformées de Fourier et \textsf{\href{http://sourceforge.net/projects/blitz/}{Blitz++}} aux calculs sur les vecteurs. Toutefois \textsf{Blitz++} est assez vieux (une quinzaine d'années) et n'utilise donc pas toutes les possibilités offertes par les langages modernes (au moins pour la version en \textsf{C++}).
@@ -46,6 +47,8 @@ Si l'on suppose que la mise à jour de la grille par application du stencil n'es
 
 Le parallélisme s'obtient presque immédiatement pour les stencils, mais cela ne signifie pas pour autant qu'il est efficace. En effet les problèmes qui les utilisent nécessitent généralement beaucoup de mémoire (qui est de plus doublée en considérant que les calculs ne sont pas en place), ce qui rend l'efficacité moindre. La mémoire des ordinateurs est hiérarchique et les lectures/écritures rapides des éléments d'une grille ne peuvent se faire que sur de petites parties proches des processeurs. Il s'agit de la mémoire \emph{cache} -- ou plus simplement, du cache -- qui est elle-même hiérarchique. Les plus grandes difficultés dans la parallélisation des stencils sont ainsi liées à la bonne utilisation de la mémoire, afin d'éviter les chargements/déchargements inutiles de données\footnote{Notons par ailleurs que l'amélioration des performances par du recouvrement calculs/communications n'a pas été abordée lors du stage.}. En effet si nous supposons que chaque cœur est associé à un élément de la grille et en considérant de nouveau le cas de la figure \ref{fig:stencil_base}, chaque élément nécessite les valeurs des quatre éléments autour de lui pour effectuer le calcul. Si chaque cœur chargeait séparément ces valeurs, il faudrait donc l'équivalent de cinq grilles en mémoire (quatre -- identiques -- pour les valeurs de départ et une pour le résultat), alors qu'en réalité seule deux sont nécessaires. La difficulté de la parallélisation des stencils réside donc dans la façon d'utiliser la mémoire, notamment en faisant en sorte que les cœurs soient disposés comme les éléments de la grille et partagent avec leurs voisins les éléments qu'ils utilisent, afin d'une part de maximiser la réutilisation des données, et d'autre part de minimiser les temps de transfert.
 
+\subsection{Organisation de la mémoire matérielle}
+
 L'élément premier de la hiérarchie de la mémoire est le disque dur, qui est suivi par la mémoire RAM plus rapide mais plus petite. Nous supposons ici que le problème peut toujours être contenu en mémoire RAM. En-dessous d'elle se situe la mémoire des processeurs, le cache, qui limite les performance car elle ne peut pas contenir les données du problème entier. Le cache est lui-même décomposé en plusieurs niveaux qui sont de plus en plus petits et rapides (de la RAM vers les cœurs), mais de moins en moins partagés par les cœurs. La figure \ref{fig:memoire_base} donne un exemple de cette hiérarchie pour deux processeurs et une carte graphique. Les caches des processeurs possèdent trois niveaux dont les deux derniers sont exclusifs tandis que le premier est partagé de manière directe entre les cœurs d'un même processeurs, il est même partagé entre tous les cœurs mais avec un accès \emph{non-uniforme}. Chaque processeur central est alors appelé un nœud NUMA et l'accès au cache de l'autre est plus coûteux que l'accès au sien. Quant au processeur graphique il possède une mémoire globale assez grande, et des petites mémoires partagées par des groupes -- ou \emph{warps} -- de $16$ ou $32$ cœurs. Cette mémoire n'est pas un cache pour le processeur graphique, car celui-ci n'opère pas de cohérence des données entre les cœurs : c'est au programmeur de savoir quel cœur possède la donnée la plus à jour. Il en résulte une plus grande complexité dans la gestion de la mémoire graphique, et notamment l'obligation d'avoir de temps en temps des synchronisations entre les cœurs d'un même warp. 
 
 \begin{figure}[!h]
@@ -54,19 +57,22 @@ L'élément premier de la hiérarchie de la mémoire est le disque dur, qui est 
   \includegraphics[width=\textwidth]{Memory.png}
 \end{figure}
 
+{\LARGE 
+Corriger NUMA + phrase de transition}
+
 
 \section{Conception d'un DSEL pour les stencils}
 
-%L'outil développé dans le cadre du stage se situe plutôt au niveau des bibliothèques spécialisées pour les performances offertes, et plutôt au niveau des langages dédiés aux scientifiques pour le public visé, il s'agit d'un DSEL introduit au chapitre précédent. Un DSEL se différencie d'un DSL (équivalent de \emph{langage spécifique}) par le fait qu'il est disponible au sein d'un langage général (c'est le plus souvent une bibliothèque de ce langage), et permet donc potentiellement au développeur d'effectuer des tâches connexes à la résolution du problème dans un seul et même langage. Il peut ainsi utiliser plusieurs DSEL dans le même code, et résoudre des problèmes complexes avec un formalisme adapté à chacun d'entre eux (et par là-même avoir de meilleures performances). Le DSEL est ainsi une solution intermédiaire efficace, qui nous a semblé adaptée à l'objectif du stage qui est la parallélisation automatique d'une catégorie spécifique de programmes. 
+Principalement deux DSEL existent déjà pour les stencils : \textsf{Pochoir} et \textsf{Blitz++} cependant les deux souffrent de plusieurs désavantages que nous avons essayer d'éviter dans le DSEL élaboré pendant le stage. Les deux nécessitent par exemple l'apprentissage de plusieurs mots-clés qui fonctionnent généralement comme des balises HTML : ils ouvrent des sections spécifiques puis les ferment. Cela facilite certainement l'analyse du code par le compilateur dans le cas de \textsf{Pochoir}, mais dans les deux cas cela est contraire au paradigme assez répandu de l'utilisation de fonctions à arguments (ou bien méthodes) pour initialiser ou faire des calculs sur des éléments (objets, structures, etc\ldots) -- que ce soit dans la programmation orientée objet, impérative ou fonctionnelle. Par ailleurs \textsf{Blitz++} souffre de l'utilisation de \emph{macros}, des parties de codes qui sont rajoutées dans le code par le compilateur avant la compilation, mais sont parfois présentées comme des fonctions au développeur ; en cas d'erreur lors de la compilation il peut donc il y avoir confusion sur son origine. Enfin les deux DSEL se focalisent sur une exécution sur CPU uniquement, alors que les GPU sont très adaptés à ce genre d'opérations.
 
-Principalement deux DSEL existent déjà pour les stencils : \textsf{Pochoir} et \textsf{Blitz++} cependant les deux souffrent de plusieurs désavantages. Les deux nécessitent l'apprentissage de plusieurs mots-clés qui fonctionnent généralement comme des balises HTML : ils ouvrent des sections spécifiques puis les ferment. Cela facilite certainement l'analyse du code par le compilateur dans le cas de \textsf{Pochoir}, mais dans les deux cas cela est contraire au paradigmes assez répondu de l'utilisation de fonctions à arguments (ou bien méthodes) pour initialiser ou faire des calculs sur des éléments (objets, structures, etc\ldots) -- que ce soit dans la programmation orientée objet, impérative ou fonctionnelle. Par ailleurs \textsf{Blitz++} souffre de l'utilisation de \emph{macros}, des parties de codes qui sont rajoutées dans le code par le compilateur avant la compilation, mais sont parfois présentées comme des fonctions au développeur ; en cas d'erreur lors de la compilation il peut donc il y avoir confusion sur son origine. Enfin les deux DSEL se focalisent sur une exécution sur CPU uniquement, alors que les GPU sont très adaptés à ce genre d'opérations.
+En dehors des DSEL, un autre moyen d'aider le développeur est de le laisser écrire le code tel que d'habitude et de modifier le compilateur afin de détecter automatiquement les stencils. Compte-tenu de la complexité des codes actuels et des compilateurs cela nécessite un travail trop important pour le cadre du stage. Il aurait aussi été possible de développer un langage dédié au problème -- dénommé DSL (pour \emph{Domain Specific Language}, équivalent de \emph{langage dédié à un domaine}) --, mais cela n'est pas avantageux à plusieurs titres. D'une part il est alors nécessaire de créer un compilateur associé. D'autre part un langage dédié au problème ne permet par définition pas d'en traiter d'autres, or les stencils ne sont la plupart du temps qu'une étape dans la résolution d'un problème plus élaboré. Un langage dédié aurait donc du être interfacé avec d'autres. Au contraire un DSEL est développé dans un langage préexistant, et utilisable directement dans ce langage. Le programmeur peut alors utiliser plusieurs DSEL dans le même code, et résoudre des problèmes complexes avec un formalisme adapté à chacun d'entre eux (et par là-même avoir de meilleures performances). Le DSEL est ainsi une solution intermédiaire efficace, qui nous a semblé adaptée à l'objectif du stage qui est la parallélisation automatique d'une catégorie spécifique de programmes. Il se situe dans la même classe de bibliothèques que \textsf{Blitz++} ou les \textsf{BLAS} et en reprend certains concepts.
 
-Todd L. Veldhuizen, le concepteur de \textsf{Blitz++}, a introduit la notion d'\emph{active libraries} (\emph{bibliothèques actives}) \cite{Art20} afin de décrire ce qu'un DSEL notamment (ainsi que le compilateur associé) doit proposer a minima. Ces bibliothèques doivent tirer partie de toutes les possibilités dont elles disposent : à la fois la sémantique de l'expression qui est codée par le biais du DSEL, et les performances offertes par des bibliothèques spécialisées dans certains types d'opérations. Elles sont actives car elles ne fournissent pas seulement des méthodes optimisées, elles les choisissent en fonction de l'expression. Par ailleurs Todd Veldhuizen propose dans l'article \cite{Art22} trois aspects à développer dans le DSEL afin d'obtenir des performances : \emph{Pretty, Safe, Fast} (pour joli, sûr, et rapide). Ces trois aspects sont au centre des préoccupations avec lesquelles le DSEL a été développé au cours du stage. Tandis que nous regroupons le caractère joli et sûr dans les objectifs sémantiques, la rapidité est quant à elle liée à la performance.
+Todd L. Veldhuizen, le concepteur de \textsf{Blitz++}, a introduit la notion d'\emph{active libraries} (\emph{bibliothèques actives}) \cite{Art20} afin de décrire ce qu'un DSEL notamment (ainsi que le compilateur associé) doit proposer a minima. Ces bibliothèques doivent tirer partie de toutes les possibilités dont elles disposent : à la fois la sémantique de l'expression qui est codée par le biais du DSEL, et les performances offertes par des bibliothèques spécialisées dans certains types d'opérations. Elles sont actives car elles ne fournissent pas seulement des méthodes optimisées, elles les choisissent en fonction de l'expression. Par ailleurs Todd Veldhuizen propose dans l'article \cite{Art22} trois aspects à développer dans le DSEL afin d'obtenir des performances : \emph{Pretty, Safe, Fast} (pour élégant, sûr, et rapide). Ces trois aspects sont au centre des préoccupations avec lesquelles le DSEL a été développé au cours du stage. Tandis que nous regroupons les caractères élégants et sûr dans les objectifs sémantiques, la rapidité est quant à elle liée à la performance.
 
 \subsection{Objectifs sémantiques}
 \label{sec:obj_sem}
 
-Le premier objectif sémantique est tout simplement de pouvoir décrire toutes les formes de stencils. Le stencil lui-même est déterminé par les indices des éléments qui rentrent en jeu dans le calcul. Dans l'exemple précédent de stencil à quatre points dans une grille en deux dimensions, si nous considérons comme origine du repère un élément quelconque à mettre à jour alors les éléments nécessaires à sa mise à jour sont d'indices $(-1,0)$, $(1,0)$, $(0,-1)$ et $(0,1)$. La simple connaissance de ces indices relatifs permet de retrouver le motif du stencil, il est donc primordial de pouvoir déclarer simplement les indices entrant en jeu dans le stencil. Dans la suite du document nous appelons ces indices relatifs les \emph{indices de décalage}.
+Le premier objectif sémantique est de pouvoir décrire toutes les formes de stencils. Le stencil lui-même est déterminé par les indices des éléments qui rentrent en jeu dans le calcul. Dans l'exemple précédent de stencil à quatre points dans une grille en deux dimensions, si nous considérons comme origine du repère un élément quelconque à mettre à jour alors les éléments nécessaires à sa mise à jour sont d'indices $(-1,0)$, $(1,0)$, $(0,-1)$ et $(0,1)$. La simple connaissance de ces indices relatifs permet de retrouver le motif du stencil, il est donc primordial de pouvoir déclarer simplement les indices entrant en jeu dans le stencil. Dans la suite du document nous appelons ces indices relatifs les \emph{indices de décalage}.
 
 Par ailleurs un stencil peut nécessiter des coefficients. Par exemple dans le cas de l'algorithme classique Jacobi, ces coefficients sont constants et ne sont liés qu'aux positions relatives des éléments accédés par le stencil. Si la grille des éléments est stockée dans un tableau $A$ à deux dimensions, l'équation associée à la mise à jour d'un élément d'indice global $(i,j)$ par le stencil pourrait donc s'écrire de façon mathématique comme l'équation \ref{eq:st0_fxd} où les $c_x$ sont les coefficients fixes.
 \begin{equation}
@@ -75,7 +81,7 @@ A[i,j] = c_1 \times A[i-1,j+0] + c_2 \times A[i+1,j+0] + c_3 \times A[i+0,j-1] +
 \end{equation}
 Les coefficients étant dans ce cas liés aux indices de décalage, un DSEL doit donc permettre la possibilité de déclarer les deux en même temps.
 
-Toutefois cet exemple ne regroupe pas tous les cas possibles, il est par exemple possible d'imaginer abstraire l'opération de réduction qu'est ici la somme -- ce qui n'est pas très utile --, de même que l'opération liant les coefficients aux éléments de la grille -- ce qui est beaucoup plus utile par exemple si les éléments ne sont pas de simples scalaires, mais des matrices ou des nombres complexes. Nous notons respectivement $\oplus$ et $\otimes$ ces deux opérations, l'équation \ref{eq:st0_fxd} se réécrit alors en l'équation \ref{eq:st1_fxd}.
+Toutefois cet exemple ne regroupe pas tous les cas possibles, il est par exemple possible d'imaginer abstraire l'opération de réduction qu'est ici la somme, de même que l'opération liant les coefficients aux éléments de la grille (notamment si les éléments ne sont pas de simples scalaires, mais des matrices ou des nombres complexes). Nous notons respectivement $\oplus$ et $\otimes$ ces deux opérations, l'équation \ref{eq:st0_fxd} se réécrit alors en l'équation \ref{eq:st1_fxd}.
 \begin{equation}
 \label{eq:st1_fxd}
 A[i,j] = c_1 \otimes A[i-1,j+0] \oplus c_2 \otimes A[i+1,j+0] \oplus c_3 \otimes A[i+0,j-1] \oplus c_4 \otimes A[i+0,j+1]
@@ -122,16 +128,16 @@ En résumé l'application d'un stencil sur une grille nécessite l'enregistremen
 \item le \emph{stream} (ou \emph{flux}) de plusieurs stencils à la suite sur un unique tableau de départ, les tableaux intermédiaires étant alors omis.
 \end{itemize}
 
-Les caractères joli et sûr du DSEL sont nécessairement dépendant du langage choisi. En ce qui concerne l'élégance, il s'agit d'utiliser le moins de symboles et fonctions possibles, et de cacher tous les paramètres inutiles. Pour la sûreté le but est de détecter certains types d'erreurs comme l'utilisation du même tableau en entrée et en sortie (en supposant que le calcul en place n'a pas lieu d'être) et l'usage d'indices de décalage en dehors de la grille.
+Les caractères élégant et sûr du DSEL sont nécessairement dépendant du langage choisi. En ce qui concerne l'élégance, il s'agit d'utiliser le moins de symboles et fonctions possibles, et de cacher tous les paramètres calculables automatiquement. Pour la sûreté le but est de détecter certains types d'erreurs comme l'utilisation du même tableau en entrée et en sortie (en supposant que le calcul en place n'a pas lieu d'être) et l'usage d'indices de décalage en dehors de la grille.
 
 \subsection{Objectifs de performances}
 \label{sec:obj_perf}
 
-Les performances peuvent s'obtenir grâce à l'adaptation du code tant par rapport au matériel que par rapport aux algorithmes de calculs utilisés. Deux voies principales doivent être explorées : la réutilisation maximale des données dans le cache (qui induit le principe de \emph{tuilage}), le calcul du plus grand nombre de paramètres possibles lors de la compilation (les variables en jeu étant alors \emph{statiques}).
+Les performances peuvent s'obtenir grâce à l'adaptation du code tant par rapport au matériel que par rapport aux algorithmes de calculs utilisés. Deux voies complémentaires doivent être explorées : la réutilisation maximale des données dans le cache (qui induit le principe de \emph{tuilage}), le calcul du plus grand nombre de paramètres possibles lors de la compilation (les paramètres en jeu étant alors \emph{statiques}).
 
 \subsubsection*{Tuilage de stencil} 
 
-Avant de déterminer quels paramètres peuvent être calculés à la compilation, il est nécessaire de voir plus en détail comment la parallélisation va être effectuée au sein du stencil. Puisque les tableaux utilisés dans les calculs sont généralement trop grand pour la mémoire respectivement cache ou locale proche des processeurs respectivement centraux ou graphiques, la grille de l'exemple précédent est divisée en blocs que nous appelons \emph{macro-tuiles}. La taille de chaque macro-tuile est choisie de façon que la mémoire utilisée par les calculs tienne soit dans les caches L3 soit dans la mémoire locale (cf figure \ref{fig:memoire_base}). La façon de paralléliser la macro-tuile est la suivante : chaque processeur central (ou warp dans le cas des cartes graphiques) est lié à une macro-tuile et chaque cœur va appliquer le stencil sur un ou plusieurs éléments différents\footnote{La notion de \emph{tuile} sera utilisée dans la section \ref{sec:desc_mat_tests} et fait référence à la parallélisation au sein d'un cœur, et non au sein d'un processeur.}. Si l'on reprend l'exemple de la figure \ref{fig:memoire_base} avec le stencil à $4$ points, la parallélisation par tuilage sur la carte graphique sur une grille de $10$ par $10$ éléments va pouvoir se faire en la découpant en quatre blocs carrés chacun associé à un warp. Chaque \emph{warp} possédant chacun $16$ cœurs va appliquer le stencil sur une macro-tuile de dimensions $4 \times 4$. La figure \ref{fig:stencil_mtile} représente cette situation en précisant par des bordures en pointillées les éléments fantômes que le \emph{warp} $0$ coloré en jaune devra contenir. Bien que les seuls fantômes à la base soient les éléments rouges en bordure de la grille, chaque \emph{warp} a besoin de charger les éléments autour de lui compte-tenu de la forme du stencil.
+Avant de déterminer quels paramètres peuvent être calculés à la compilation, il est nécessaire de voir plus en détail comment la parallélisation va être effectuée au sein du stencil. Puisque les tableaux utilisés dans les calculs sont généralement trop grands pour la mémoire respectivement cache ou locale proche des processeurs respectivement centraux ou graphiques, la grille de l'exemple précédent est divisée en blocs que nous appelons \emph{macro-tuiles}. La taille de chaque macro-tuile est choisie de façon que la mémoire utilisée par les calculs tienne soit dans les caches L3 soit dans la mémoire locale (cf figure \ref{fig:memoire_base}). La façon de paralléliser la macro-tuile est la suivante : chaque processeur central (ou warp dans le cas des cartes graphiques) est lié à une macro-tuile et chaque cœur va appliquer le stencil sur un ou plusieurs éléments différents\footnote{La notion de \emph{tuile} sera utilisée dans la section \ref{sec:desc_mat_tests} et fait référence à la parallélisation au sein d'un cœur, et non au sein d'un processeur.}. Si l'on reprend l'exemple de la figure \ref{fig:memoire_base} avec le stencil à $4$ points, la parallélisation par tuilage sur la carte graphique sur une grille de $10$ par $10$ éléments va pouvoir se faire en la découpant en quatre blocs carrés chacun associé à un warp. Chaque \emph{warp} possédant chacun $16$ cœurs va appliquer le stencil sur une macro-tuile de dimensions $4 \times 4$. La figure \ref{fig:stencil_mtile} représente cette situation en précisant par des bordures en pointillées les éléments fantômes que le \emph{warp} $0$ coloré en jaune devra contenir. Bien que les seuls fantômes à la base soient les éléments rouges en bordure de la grille, chaque \emph{warp} a besoin de charger les éléments autour de lui compte-tenu de la forme du stencil.
 
 \begin{figure}[!h]
 \floatbox[{\capbeside\thisfloatsetup{capbesideposition={right,center},capbesidewidth=4cm}}]{figure}[\FBwidth]
@@ -145,9 +151,9 @@ Le cas de la figure \ref{fig:stencil_mtile} est simple car il y a autant de cœu
 
 De même cet exemple est uniquement en deux dimensions, mais certains calculs nécessitent des stencils sur des grilles à quatre dimensions, notamment en chromodynamique quantique. Certains articles \cite{Art1,Art11} développent des techniques spécifiques pour y remédier, tout en gardant une certaine réutilisation des données. Ces techniques sont très spécialisées et ne seront pas évoquées ici, toutefois il convient de savoir qu'elles existent et que le DSEL devrait être capable à terme de les intégrer.
 
-\subsubsection*{Variables statiques}
+\subsubsection*{Paramètres statiques}
 
-Les variables statiques vont permettre d'éviter au programme certains calculs lors de l'exécution (qui sont alors reportés à l'exécution), et donc d'être légèrement plus rapide. Les principales variables entrant en jeu pour la parallélisation sont :
+Les paramètres statiques vont permettre d'éviter au programme certains calculs lors de l'exécution (qui sont tout de même faits lors de la compilation), et donc d'être légèrement plus rapide. Les principaux paramètres entrant en jeu pour la parallélisation sont :
 \begin{itemize}
 \item le nombre de dimensions de la grille ;
 \item le nombre d'éléments dans chaque dimension de la grille ;
@@ -160,7 +166,10 @@ Les variables statiques vont permettre d'éviter au programme certains calculs l
 \item la taille des zones fantômes des macro-tuiles.
 \end{itemize}
 
-Toutes ces variables peuvent (et doivent) être statique hormis le nombre d'éléments de la grille, qui par choix est déterminé à l'exécution. En effet nous supposons que le programme doit être compilé pour chaque problème différent (donc avec des stencils différents) mais pas pour chaque instance du même problème, où seul le nombre d'éléments (donc la précision de la résolution) change. C'est cette approche qui est aussi utilisée dans \textsf{QIRAL}. Le problème est alors de savoir comment calculer ces variables statiquement -- certaines peuvent se déduire les unes des autres --, et cela dépend du langage choisi pour le DSEL, notamment si le langage autorise la méta-programmation, une façon de modifier le comportement de certaines fonctions à la compilation. Le calcul de la taille des macro-tuiles et de leur zone fantôme est détaillé dans la section \ref{sec:param_tuile} du chapitre suivant.
+Toutes ces paramètres peuvent (et doivent) être statique hormis le nombre d'éléments de la grille, qui par choix est déterminé à l'exécution. En effet nous supposons que le programme doit être compilé pour chaque problème différent (donc avec des stencils différents) mais pas pour chaque instance du même problème, où seul le nombre d'éléments (donc la précision de la résolution) change. C'est cette approche qui est aussi utilisée dans \textsf{QIRAL}. Le problème est alors de savoir comment calculer ces paramètres statiquement -- certaines peuvent se déduire les unes des autres --, et cela dépend du langage choisi pour le DSEL, notamment si le langage autorise la méta-programmation, une façon de modifier le comportement de certaines fonctions à la compilation. Le calcul de la taille des macro-tuiles et de leur zone fantôme est détaillé dans la section \ref{sec:param_tuile} du chapitre suivant.
 
-Plus généralement, d'autres variables aidant dans l'ordonnancement des calculs (notamment si plusieurs types de processeurs sont disponibles) pourraient (mais difficilement) être calculées lors de la compilation, mais cela n'a pas été étudié dans le cadre du stage, d'autant que la tendance actuelle est justement à l'opposée : c'est le rôle des supports d'exécutions que de faire ces calculs lors de l'exécution. Outre l'ordonnancement des calculs, il s'agit aussi d'ordonnancer les recopies mémoires, notamment vers la mémoire globale des processeurs graphiques.
+Plus généralement, d'autres paramètres aidant dans l'ordonnancement des calculs (notamment si plusieurs types de processeurs sont disponibles) pourraient (mais difficilement) être calculées lors de la compilation, mais cela n'a pas été étudié dans le cadre du stage, d'autant que la tendance actuelle est justement à l'opposée : c'est le rôle des supports d'exécutions que de faire ces calculs lors de l'exécution. Outre l'ordonnancement des calculs, il s'agit aussi d'ordonnancer les recopies mémoires, notamment vers la mémoire globale des processeurs graphiques.
 
+
+
+Les objectifs du DSEL à implanter sont donc de plusieurs natures : à la fois centrés sur la sémantique et toutes les informations nécessaire à un calcul de stencil, et aussi sur les performances de ce calcul. Le travail d'implantation concerne donc tout autant l'interface utilisateur mise en place que la façon de paralléliser les calculs. Par ailleurs réimplanter les mécanismes permettant la parallélisation sur les machines modernes est une tâche bien trop lourde qu'il n'est pas possible de réaliser nous-même, ce pour quoi nous utilisons une bibliothèque tierce qui lance elle-même les calculs optimisés par le DSEL. Cette bibliothèque, l'interface et l'implantation des objectifs sont détaillés dans le chapitre suivant.
